// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApiErrorBanner Component should render when error prop is passed 1`] = `
<Banner
  status="warning"
  title="An error occurred"
>
  <p>
    Sorry, there was an issue loading your your resource.
  </p>
  <Button
    onClick={[Function]}
    outline={true}
    size="default"
  >
    Show Error Details
  </Button>
</Banner>
`;

exports[`ApiErrorBanner Component should render with details 1`] = `
<Banner
  status="info"
  title="You Have Another Mission"
>
  <p>
    Clean the conference room
  </p>
  <Button
    onClick={[Function]}
    outline={true}
    size="default"
  >
    Show Error Details
  </Button>
</Banner>
`;

exports[`ApiErrorBanner Component should render with details 2`] = `
<Banner
  status="info"
  title="You Have Another Mission"
>
  <p>
    Clean the conference room
  </p>
  <Button
    onClick={[Function]}
    outline={true}
    size="default"
  >
    Hide Error Details
  </Button>
  <p
    style={
      Object {
        "marginTop": "20px",
      }
    }
  >
    <strong>
      Details:
    </strong>
     
    Got Damn!
  </p>
</Banner>
`;

exports[`ApiErrorBanner Component should render with no props 1`] = `
<Banner
  status="warning"
  title="An error occurred"
>
  <p>
    Sorry, there was an issue.
  </p>
</Banner>
`;

exports[`ApiErrorBanner Component should render with props 1`] = `
<Banner
  status="info"
  title="You Have Another Mission"
>
  <p>
    Clean the conference room
  </p>
</Banner>
`;

exports[`ApiErrorBanner Component should render with reload 1`] = `
<Banner
  status="info"
  title="You Have Another Mission"
>
  <p>
    Clean the conference room
  </p>
  <Button
    onClick={[Function]}
    outline={true}
    size="default"
    style={
      Object {
        "marginRight": "10px",
      }
    }
  >
    Try Again
  </Button>
</Banner>
`;
